--- a/resources/web/carousel.html
+++ b/resources/web/carousel.html
@@ -53,13 +53,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="#">BitPieces</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#discover">Discover</a></li>
                 <li><a href="/dashboard" id="dashboardhref" class="hide">Dashboard</a></li>
                 <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#myModal">Login/Register</a></li>
                 <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
@@ -76,6 +75,9 @@
                   </ul>
                 </li>
               </ul>
+              <form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>
             </div>
           </div>
         </div>
