starting to make the creator dashboard

--- a/resources/web/carousel.html
+++ b/resources/web/carousel.html
@@ -60,7 +60,7 @@
                 <li class="active"><a href="/carousel">Home</a></li>
                 <li><a href="#discover">Discover</a></li>
                 <li><a href="/creators">Creators</a></li>
-                <li><a href="/dashboard" id="dashboardhref" class="hide">Dashboard</a></li>
+                <li><a href="/userdashboard" id="dashboardhref" class="hide">Dashboard</a></li>
                 <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                 <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
                 <li class="dropdown">
