Creator page saving about 1/3rd done

--- a/resources/web/creatordashboardcustomize.html
+++ b/resources/web/creatordashboardcustomize.html
@@ -127,7 +127,7 @@
         <form id="customizeForm" class="form-horizontal" role="form">
           <div class="form-group">
             <label>Text area</label>
-            <textarea class="form-control" rows="3"></textarea>
+            <textarea id="main_body" name="main_body" class="form-control" rows="3"></textarea>
           </div>
 
           <div class="form-group">
