alright heyah it is

--- a/resources/web/creators_pages/1.html
+++ b/resources/web/creators_pages/1.html
@@ -92,7 +92,7 @@
 
  <div class="starter-template">
  <h1>Creator # 1 Page </h1>
- <p class="lead">oh hi tatiana</p>
+ <p class="lead">lkjlkjasdf</p>
  </div>
 <div class="row">
 	<div class="col-md-12">
