Got prices for user now
Former-commit-id: dbff199b7e20ca35c4b2b09049196676877a23ea

--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -51,13 +51,34 @@
             <li><a href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a></li>
             <li><a href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a></li>
             <li><a href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a></li>
-
           </ul>
 
         </div>
 
         <!-- Top Bar -->
         <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+
+              <ul class="nav navbar-nav navbar-user navbar-left">
+                <li><a class="navbar-brand" href="#">BitPieces</a></li>
+                <li><a href="/carousel">Home</a></li>
+                <li><a href="#discover">Discover</a></li>
+                <li><a href="/creators">Creators</a></li>
+                <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+                <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
+                <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-header">Nav header</li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                  </ul>
+                </li>
+              </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-user">
             <li class="dropdown messages-dropdown">
