--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -196,7 +196,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="login.js"></script>
-      <script src="userdashboard_pieces.js"></script>
+      <script src="userdashboard_prices.js"></script>
 
     </body>
     </html>
