--- a/resources/web/userdashboard_pieces.html
+++ b/resources/web/userdashboard_pieces.html
@@ -154,18 +154,53 @@
     <!-- The Page -->
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
-      <!-- a big ass chart -->
+      <!-- a 6 wide  chart -->
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-6">
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Traffic Statistics: October 1, 2013 - October 31, 2013</h3>
+              <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Pieces owned value</h3>
             </div>
             <div class="panel-body">
-              <div class = "fullscreen-chart" id="highcharts-chart-area"></div>
+              <div class = "small-chart" id="pieces_owned_value"></div>
             </div>
           </div>
         </div>
+        <div class="col-md-6">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Pieces owned</h3>
+            </div>
+            <div class="panel-body">
+              <div class = "small-chart" id="pieces_owned"></div>
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
+       <!-- a 6 wide  chart -->
+      <div class="row">
+        <div class="col-md-6">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Pieces owned value</h3>
+            </div>
+            <div class="panel-body">
+              <div class = "small-chart" id="pieces_owned_value_current"></div>
+            </div>
+          </div>
+        </div>
+         <div class="col-md-6">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards earned</h3>
+            </div>
+            <div class="panel-body">
+              <div class = "small-chart" id="rewards_earned"></div>
+            </div>
+          </div>
+        </div>
+   
       </div><!-- /.row -->
 
 
