--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -56,8 +56,8 @@
           <ul class="nav nav-sidebar">
             <li><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li><a href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a></li>
-            <li class="active"><a href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a></li>
-            <li><a href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a></li>
+            <li><a href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a></li>
+            <li class="active"><a href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a></li>
 
           </ul>
           <!-- </div> -->
