--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -150,7 +150,7 @@
             <div class="col-md-6">
               <div class="panel panel-primary">
                 <div class="panel-heading">
-                  <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Pieces owned value</h3>
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Funds</h3>
                 </div>
                 <div class="panel-body">
                   <div class = "small-chart" id="users_funds"></div>
