--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -150,10 +150,39 @@
             <div class="col-md-6">
               <div class="panel panel-primary">
                 <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Funds</h3>
+                  <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Funds</h3>
                 </div>
                 <div class="panel-body">
                   <div class = "small-chart" id="users_funds"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="panel panel-primary">
+                <div class="panel-heading">
+                  <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Transactions</h3>
+                </div>
+                <div id="transactions" class="panel-body">
+                  <script id="transactions_template" type="x-tmpl-mustache">  
+                    <table class="table table-hover table-striped">
+                      <tr>
+                      <th>Time</th>
+                        <th>Type</th>
+                        <th>Recipient</th>
+                        <th>Funds</th>
+                      </tr>
+                      {{#.}}
+                      <tr> 
+                        <td>{{time_}}</td>
+                        <td>{{type}}</td>
+                        <td>{{recipient}}</td>
+                        <td>{{funds}}</td>
+                      </tr>
+                      {{/.}}
+
+                    </table>
+                  </script>
                 </div>
               </div>
             </div>
@@ -168,9 +197,9 @@
       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="jquery-1.11.1.min.js"></script>
       <script src="bootstrap-dist/js/bootstrap.min.js"></script>
-      <script src="../../assets/js/docs.min.js"></script>
+
       <script type="text/javascript" src="bootstrap-validator/dist/js/bootstrapValidator.js"></script>
       <script src="toastr/toastr.js"></script>
       <script src="mustache/mustache.js"></script>
