--- a/resources/web/userdashboard_pieces.html
+++ b/resources/web/userdashboard_pieces.html
@@ -178,7 +178,7 @@
         </div>
       </div><!-- /.row -->
 
-       <!-- a 6 wide  chart -->
+      <!-- a 6 wide  chart -->
       <div class="row">
         <div class="col-md-6">
           <div class="panel panel-primary">
@@ -190,7 +190,7 @@
             </div>
           </div>
         </div>
-         <div class="col-md-6">
+        <div class="col-md-6">
           <div class="panel panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards earned</h3>
@@ -200,7 +200,7 @@
             </div>
           </div>
         </div>
-   
+        
       </div><!-- /.row -->
 
 
@@ -215,7 +215,7 @@
       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="jquery-1.11.1.min.js"></script>
       <script src="bootstrap-dist/js/bootstrap.min.js"></script>
       <script src="../../assets/js/docs.min.js"></script>
       <script type="text/javascript" src="bootstrap-validator/dist/js/bootstrapValidator.js"></script>
