--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -180,9 +180,8 @@
       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="jquery-1.11.1.min.js"></script>
       <script src="bootstrap-dist/js/bootstrap.min.js"></script>
-      <script src="../../assets/js/docs.min.js"></script>
       <script type="text/javascript" src="bootstrap-validator/dist/js/bootstrapValidator.js"></script>
       <script src="toastr/toastr.js"></script>
       <script src="mustache/mustache.js"></script>
