--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -44,11 +44,11 @@
       <!-- Start using sb admin stuff -->
       <div id="wrapper">
 
-        <!-- Sidebar -->
+         <!-- Sidebar -->
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
-            <li class="active"><a href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a></li>
+            <li class="active"><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
+            <li><a href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a></li>
             <li><a href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a></li>
             <li><a href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a></li>
           </ul>
@@ -115,35 +115,41 @@
                 <li><a href="#">View Inbox <span class="badge">7</span></a></li>
               </ul>
             </li>
-            <li class="dropdown alerts-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> Alerts <span class="badge">3</span> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Default <span class="label label-default">Default</span></a></li>
-                <li><a href="#">Primary <span class="label label-primary">Primary</span></a></li>
-                <li><a href="#">Success <span class="label label-success">Success</span></a></li>
-                <li><a href="#">Info <span class="label label-info">Info</span></a></li>
-                <li><a href="#">Warning <span class="label label-warning">Warning</span></a></li>
-                <li><a href="#">Danger <span class="label label-danger">Danger</span></a></li>
-                <li class="divider"></li>
-                <li><a href="#">View All</a></li>
-              </ul>
-            </li>
-            <li class="dropdown user-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+         
+
+            <li id="userDropdown" class="dropdown user-dropdown">
+
+             <script id="usernameTemplate" type="x-tmpl-mustache">  
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{username}} <b class="caret"></b></a>
+
+
               <ul class="dropdown-menu">
                 <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
                 <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
                 <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
                 <li class="divider"></li>
                 <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
+
               </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
+            </script>
+          </li>
+          
+        </ul>
+      </div><!-- /.navbar-collapse -->
 
 
         <!-- The Page -->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
+        <div class="row">
+          <div class="col-lg-12">
+            <h1>Funds <small>Your funds </small></h1>
+            <ol class="breadcrumb">
+              <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
+              <li class="active"><i class="fa fa-table"></i> Funds</li>
+            </ol>
+          </div>
+        </div><!-- /.row -->
 
           <!-- a 6 wide  chart -->
           <div class="row">
