--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -115,31 +115,40 @@
                 <li><a href="#">View Inbox <span class="badge">7</span></a></li>
               </ul>
             </li>
-         
+
 
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{username}} <b class="caret"></b></a>
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{username}} <b class="caret"></b></a>
 
 
-              <ul class="dropdown-menu">
-                <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-                <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
-                <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
-                <li class="divider"></li>
-                <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
+             <ul class="dropdown-menu">
+             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
+             <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
+             <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+             <li class="divider"></li>
+             <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-              </ul>
-            </script>
-          </li>
-          
-        </ul>
-      </div><!-- /.navbar-collapse -->
+             </ul>
+             </script>
+           </li>
 
-      <!-- The Page -->
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+         </ul>
+       </div><!-- /.navbar-collapse -->
 
+       <!-- The Page -->
+       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
+        <div class="row">
+          <div class="col-md-12">
+            <h1>Overview <small> Your overview</small></h1>
+            <ol class="breadcrumb">
+              <li><i class="fa fa-dashboard"></i> Overview</a></li>
+            </ol>
+            </div>
+
+        </div>
         <!-- a big ass chart -->
         <div class="row">
           <div class="col-lg-12">
