--- a/resources/web/userdashboard_pieces.html
+++ b/resources/web/userdashboard_pieces.html
@@ -25,6 +25,9 @@
   <!--   toastr css -->
   <link href="toastr/toastr.css" rel="stylesheet"/>
 
+     <!--   typeahead css -->
+  <link href="typeaheadjs.css" rel="stylesheet"/>
+
 
 
 
@@ -224,6 +227,7 @@
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
       <script src="highcharts/js/themes/dark-unica.js"></script>
+       <script src="typeahead.js/typeahead.bundle.js"></script>
 
       <!-- my scripts -->
       <script src="tools.js"></script>
