--- a/resources/web/carousel.html
+++ b/resources/web/carousel.html
@@ -76,7 +76,7 @@
                   </ul>
                 </li>
               </ul>
-              <form class="navbar-form navbar-right">
+              <form id="creator_search" class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
               </form>
             </div>
@@ -148,7 +148,7 @@
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                   <div class="checkbox">
-                    
+
                    <label>
                     <input name="creatorCheckbox" type="checkbox" id="creatorCheckbox" value="creator"> I'm a Creator
                   </label>
