--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -25,8 +25,8 @@
   <!--   toastr css -->
   <link href="toastr/toastr.css" rel="stylesheet"/>
 
-
-
+     <!--   typeahead css -->
+  <link href="typeaheadjs.css" rel="stylesheet"/>
 
   <!-- This main css -->
   <link href="userdashboard.css" rel="stylesheet">
@@ -47,111 +47,111 @@
       <!-- Start using sb admin stuff -->
       <div id="wrapper">
 
-         <!-- Sidebar -->
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li class="active"><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
-            <li><a href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a></li>
-            <li><a href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a></li>
-            <li><a href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a></li>
-          </ul>
-
-        </div>
-
-        <!-- Top Bar -->
-        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-
-          <ul class="nav navbar-nav navbar-user navbar-left">
-            <li><a class="navbar-brand" href="#">BitPieces</a></li>
-            <li><a href="/carousel">Home</a></li>
-            <li><a href="#discover">Discover</a></li>
-            <li><a href="/creators">Creators</a></li>
-            <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
-            <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
-            <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right navbar-user">
-            <li class="dropdown messages-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> Messages <span class="badge">7</span> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li class="dropdown-header">7 New Messages</li>
-                <li class="message-preview">
-                  <a href="#">
-                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                    <span class="name">John Smith:</span>
-                    <span class="message">Hey there, I wanted to ask you something...</span>
-                    <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                  </a>
-                </li>
-                <li class="divider"></li>
-                <li class="message-preview">
-                  <a href="#">
-                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                    <span class="name">John Smith:</span>
-                    <span class="message">Hey there, I wanted to ask you something...</span>
-                    <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                  </a>
-                </li>
-                <li class="divider"></li>
-                <li class="message-preview">
-                  <a href="#">
-                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                    <span class="name">John Smith:</span>
-                    <span class="message">Hey there, I wanted to ask you something...</span>
-                    <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                  </a>
-                </li>
-                <li class="divider"></li>
-                <li><a href="#">View Inbox <span class="badge">7</span></a></li>
-              </ul>
-            </li>
-         
-
-            <li id="userDropdown" class="dropdown user-dropdown">
-
-             <script id="usernameTemplate" type="x-tmpl-mustache">  
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
-
-
-              <ul class="dropdown-menu">
-                <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-                <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
-                <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
-                <li class="divider"></li>
-                <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
-
-              </ul>
-            </script>
-          </li>
-          
+       <!-- Sidebar -->
+       <div class="col-sm-3 col-md-2 sidebar">
+        <ul class="nav nav-sidebar">
+          <li class="active"><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
+          <li><a href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a></li>
+          <li><a href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a></li>
+          <li><a href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a></li>
         </ul>
-      </div><!-- /.navbar-collapse -->
 
-    <!-- The Page -->
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      </div>
 
-        <div class="row">
-          <div class="col-lg-12">
-            <h1>Prices <small>Prices for everything you own </small></h1>
-            <ol class="breadcrumb">
-              <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
-              <li class="active"><i class="fa fa-table"></i> Prices</li>
-            </ol>
-          </div>
-        </div><!-- /.row -->
+      <!-- Top Bar -->
+      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+
+        <ul class="nav navbar-nav navbar-user navbar-left">
+          <li><a class="navbar-brand" href="#">BitPieces</a></li>
+          <li><a href="/carousel">Home</a></li>
+          <li><a href="#discover">Discover</a></li>
+          <li><a href="/creators">Creators</a></li>
+          <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+          <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
+          <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right navbar-user">
+          <li class="dropdown messages-dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> Messages <span class="badge">7</span> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-header">7 New Messages</li>
+              <li class="message-preview">
+                <a href="#">
+                  <span class="avatar"><img src="http://placehold.it/50x50"></span>
+                  <span class="name">John Smith:</span>
+                  <span class="message">Hey there, I wanted to ask you something...</span>
+                  <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
+                </a>
+              </li>
+              <li class="divider"></li>
+              <li class="message-preview">
+                <a href="#">
+                  <span class="avatar"><img src="http://placehold.it/50x50"></span>
+                  <span class="name">John Smith:</span>
+                  <span class="message">Hey there, I wanted to ask you something...</span>
+                  <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
+                </a>
+              </li>
+              <li class="divider"></li>
+              <li class="message-preview">
+                <a href="#">
+                  <span class="avatar"><img src="http://placehold.it/50x50"></span>
+                  <span class="name">John Smith:</span>
+                  <span class="message">Hey there, I wanted to ask you something...</span>
+                  <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
+                </a>
+              </li>
+              <li class="divider"></li>
+              <li><a href="#">View Inbox <span class="badge">7</span></a></li>
+            </ul>
+          </li>
+
+
+          <li id="userDropdown" class="dropdown user-dropdown">
+
+           <script id="usernameTemplate" type="x-tmpl-mustache">  
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+
+
+           <ul class="dropdown-menu">
+           <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
+           <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
+           <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+           <li class="divider"></li>
+           <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
+
+           </ul>
+           </script>
+         </li>
+
+       </ul>
+     </div><!-- /.navbar-collapse -->
+
+     <!-- The Page -->
+     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>Prices <small>Prices for everything you own </small></h1>
+          <ol class="breadcrumb">
+            <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
+            <li class="active"><i class="fa fa-table"></i> Prices</li>
+          </ol>
+        </div>
+      </div><!-- /.row -->
 
       <!-- a big ass chart -->
       <div class="row">
@@ -188,6 +188,7 @@
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
       <script src="highcharts/js/themes/dark-unica.js"></script>
+      <script src="typeahead.js/typeahead.bundle.js"></script>
 
       <!-- my scripts -->
       <script src="tools.js"></script>
